--- a/index.html
+++ b/index.html
@@ -1,40 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./images/favicon-32x32.png"
+        />
+        <link rel="stylesheet" href="css/styles.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+        <title>Frontend Mentor | FAQ Accordion Card</title>
+    </head>
+    <body>
+        <main>
+            <div class="images">
+                <img
+                    src="images/illustration-woman-online-desktop.svg"
+                    alt="Woman Online"
+                    class="desktop-img"
+                />
+                <img
+                    src="images/illustration-woman-online-mobile.svg"
+                    alt="Woman Online"
+                    class="mobile-img"
+                />
+            </div>
+            <div class="text">
+                <h1>FAQ</h1>
+                <ul>
+                    <li>
+                        <h3>How many team members can I invite?</h3>
+                        <p>
+                            You can invite up to 2 additional users on the Free
+                            plan. There is no limit on team members for the
+                            Premium plan.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>What is the maximum file upload size?</h3>
+                        <p>
+                            No more than 2GB. All files in your account must fit
+                            your allotted storage space.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>How do I reset my password?</h3>
+                        <p>
+                            Click “Forgot password” from the login page or
+                            “Change password” from your profile page. A reset
+                            link will be emailed to you.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Can I cancel my subscription?</h3>
+                        <p>
+                            Yes! Send us a message and we’ll process your
+                            request no questions asked.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Do you provide additional support?</h3>
+                        <p>
+                            Chat and email support is available 24/7. Phone
+                            lines are open during normal business hours.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </main>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
-
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <div class="attribution">
+            Challenge by
+            <a
+                href="https://www.frontendmentor.io?ref=challenge"
+                target="_blank"
+                >Frontend Mentor</a
+            >. Coded by <a href="#">Your Name Here</a>.
+        </div>
+    </body>
 </html>
