Further changes to CSS and HTML for mobile layout

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                     alt="Woman Online"
                     class="mobile-img"
                 />
+                <img 
+                    src="images/bg-pattern-mobile.svg" 
+                    alt="Background"
+                    class="bg-mobile"
+                >
             </div>
             <div class="text">
                 <h1>FAQ</h1>
