--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 href="https://www.frontendmentor.io?ref=challenge"
                 target="_blank"
                 >Frontend Mentor</a
-            >. Coded by <a href="#">Your Name Here</a>.
+            >. Coded by <a href="https://github.com/bgregi" target="_blank">bgregi</a>.
         </div>
     </body>
 </html>
