--- a/index.html
+++ b/index.html
@@ -14,88 +14,105 @@
         <title>Frontend Mentor | FAQ Accordion Card</title>
     </head>
     <body>
-        <img
-            src="images/illustration-woman-online-desktop.svg"
-            alt="Woman Online"
-            class="desktop-img"
-        />
-        <img
-            src="images/illustration-woman-online-mobile.svg"
-            alt="Woman Online"
-            class="mobile-img"
-        />
-        <main>
-            <h1>FAQ</h1>
-            <div class="list">
-                <div class="q-a">
-                    <input type="checkbox" id="check1" />
-                    <label for="check1">
-                        <div class="question">
-                            How many team members can I invite?
-                            <img src="images/icon-arrow-down.svg" alt="Arrow" />
-                        </div>
-                    </label>
-                    <p>
-                        You can invite up to 2 additional users on the Free
-                        plan. There is no limit on team members for the Premium
-                        plan.
-                    </p>
+        <div class="content">
+            <img
+                src="images/illustration-woman-online-desktop.svg"
+                alt="Woman Online"
+                class="desktop-img"
+            />
+            <img
+                src="images/illustration-woman-online-mobile.svg"
+                alt="Woman Online"
+                class="mobile-img"
+            />
+            <main>
+                <h1>FAQ</h1>
+                <div class="list">
+                    <div class="q-a">
+                        <input type="checkbox" id="check1" />
+                        <label for="check1">
+                            <div class="question">
+                                How many team members can I invite?
+                                <img
+                                    src="images/icon-arrow-down.svg"
+                                    alt="Arrow"
+                                />
+                            </div>
+                        </label>
+                        <p>
+                            You can invite up to 2 additional users on the Free
+                            plan. There is no limit on team members for the
+                            Premium plan.
+                        </p>
+                    </div>
+                    <div class="q-a">
+                        <input type="checkbox" id="check2" />
+                        <label for="check2">
+                            <div class="question">
+                                What is the maximum file upload size?
+                                <img
+                                    src="images/icon-arrow-down.svg"
+                                    alt="Arrow"
+                                />
+                            </div>
+                        </label>
+                        <p>
+                            No more than 2GB. All files in your account must fit
+                            your allotted storage space.
+                        </p>
+                    </div>
+                    <div class="q-a">
+                        <input type="checkbox" id="check3" />
+                        <label for="check3">
+                            <div class="question">
+                                How do I reset my password?
+                                <img
+                                    src="images/icon-arrow-down.svg"
+                                    alt="Arrow"
+                                />
+                            </div>
+                        </label>
+                        <p>
+                            Click “Forgot password” from the login page or
+                            “Change password” from your profile page. A reset
+                            link will be emailed to you.
+                        </p>
+                    </div>
+                    <div class="q-a">
+                        <input type="checkbox" id="check4" />
+                        <label for="check4">
+                            <div class="question">
+                                Can I cancel my subscription?
+                                <img
+                                    src="images/icon-arrow-down.svg"
+                                    alt="Arrow"
+                                />
+                            </div>
+                        </label>
+                        <p>
+                            Yes! Send us a message and we’ll process your
+                            request no questions asked.
+                        </p>
+                    </div>
+                    <div class="q-a">
+                        <input type="checkbox" id="check5" />
+                        <label for="check5">
+                            <div class="question">
+                                Do you provide additional support?
+                                <img
+                                    src="images/icon-arrow-down.svg"
+                                    alt="Arrow"
+                                />
+                            </div>
+                        </label>
+                        <p>
+                            Chat and email support is available 24/7. Phone
+                            lines are open during normal business hours.
+                        </p>
+                    </div>
                 </div>
-                <div class="q-a">
-                    <input type="checkbox" id="check2" />
-                    <label for="check2">
-                        <div class="question">
-                            What is the maximum file upload size?
-                            <img src="images/icon-arrow-down.svg" alt="Arrow" />
-                        </div>
-                    </label>
-                    <p>
-                        No more than 2GB. All files in your account must fit
-                        your allotted storage space.
-                    </p>
-                </div>
-                <div class="q-a">
-                    <input type="checkbox" id="check3" />
-                    <label for="check3">
-                        <div class="question">
-                            How do I reset my password?
-                            <img src="images/icon-arrow-down.svg" alt="Arrow" />
-                        </div>
-                    </label>
-                    <p>
-                        Click “Forgot password” from the login page or “Change
-                        password” from your profile page. A reset link will be
-                        emailed to you.
-                    </p>
-                </div>
-                <div class="q-a">
-                    <input type="checkbox" id="check4" />
-                    <label for="check4">
-                    <div class="question">
-                            Can I cancel my subscription?
-                            <img src="images/icon-arrow-down.svg" alt="Arrow" />
-                        </div>
-                    </label>
-                    <p>
-                        Yes! Send us a message and we’ll process your request no
-                        questions asked.
-                    </p>
-                </div>
-                <div class="q-a">
-                    <input type="checkbox" id="check5" />
-                    <label for="check5">
-                    <div class="question">
-                            Do you provide additional support?
-                            <img src="images/icon-arrow-down.svg" alt="Arrow" />
-                        </div>
-                    </label>
-                    <p>
-                        Chat and email support is available 24/7. Phone lines
-                        are open during normal business hours.
-                    </p>
-                </div>
-            </div>
-        </main>
+            </main>
+        </div>
 
         <div class="attribution">
             Challenge by
@@ -103,7 +120,8 @@
                 href="https://www.frontendmentor.io?ref=challenge"
                 target="_blank"
                 >Frontend Mentor</a
-            >. Coded by <a href="https://github.com/bgregi" target="_blank">bgregi</a>.
+            >. Coded by
+            <a href="https://github.com/bgregi" target="_blank">bgregi</a>.
         </div>
     </body>
 </html>
