--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
     </head>
     <body>
         <div class="content">
-            <img
-                src="images/illustration-woman-online-desktop.svg"
-                alt="Woman Online"
-                class="desktop-img"
-            />
+            <div class="desktop-imgs">
+                <img
+                    src="images/illustration-woman-online-desktop.svg"
+                    alt="Woman Online"
+                    class="desktop-img"
+                />
+                <img
+                    src="images/illustration-box-desktop.svg"
+                    alt="Box"
+                    class="desktop-box"
+                />
+            </div>
             <img
                 src="images/illustration-woman-online-mobile.svg"
                 alt="Woman Online"
